<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.just.pblhub.br.pro.just.pblhub.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/student_item_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="-1"
            android:visibility="invisible"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/students_new"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/students_add_student_desc" />

        <EditText
            android:id="@+id/editTextStudentName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/students_add_student_number" />

        <EditText
            android:id="@+id/editTextStudentNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/students_groups_list" />

        <Spinner
            android:id="@+id/spinnerGroups"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickSaveStudent"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickStudentAddCancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickStudentAddDelete"
            android:text="@string/delete"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>