<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.just.pblhub.br.pro.just.pblhub.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/group_item_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="-1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewGroupName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/groups_new"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewGroupNameDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/groups_add_group_desc" />

        <EditText
            android:id="@+id/editTextGroupName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/textViewClassNameDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/classes_add_class_desc" />

        <Spinner
            android:id="@+id/spinnerClasses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickSaveGroup"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickGroupAddCancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="clickGroupAddDelete"
            android:text="@string/delete"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>