<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/listview_performance_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/listview_performance_student_delete"
            android:layout_alignBottom="@+id/listview_performance_student_delete"
            android:layout_alignParentLeft="true"
            android:text="Student Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/listview_performance_student_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="clickPerformanceStudentDelete"
            android:text="@string/delete" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_accomplishment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RatingBar
            android:id="@+id/rating_accomplishment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:numStars="5" />

        <TextView
            android:id="@+id/rating_accomplishment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rating_accomplishment"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_participation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RatingBar
            android:id="@+id/rating_participation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/rating_participation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rating_participation"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_behavior" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RatingBar
            android:id="@+id/rating_behavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/rating_behavior_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rating_behavior"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</LinearLayout>
