<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.just.pblhub.br.pro.just.pblhub.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewListOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:text="@string/students_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewListOfGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewListOfStudents"
        android:text="@string/students_groups_list" />

    <Spinner
        android:id="@+id/spinnerGroups"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewListOfGroups" />

    <TextView
        android:id="@+id/textViewListOfStudentsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerGroups"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/students_list_desc" />

    <ListView
        android:id="@+id/listViewStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonNewStudent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewListOfStudentsDesc" >
    </ListView>

    <!-- <Button
        android:id="@+id/buttonNewStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="clickAddStudent"
        android:text="@string/students_new" /> -->

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="clickAddStudent"
        android:id="@+id/floatAddStudent" />

</RelativeLayout>